--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html, body {
 }
 
 body{
-    background: linear-gradient(to right,  #c28bc2bb, #e9d8e9bb);
+    background: linear-gradient(to right,  #db0669c4, #f5c76491);
 }
 
 
@@ -26,11 +26,48 @@ h1 {
     
 }
 
+
+
 h2 {
+    text-align: center;
     font-size: 30px;
     font-family: 'Roboto', sans-serif;
-    text-align: center;
-    margin: 50px 0;
+    padding: 20px;    
+    color: #f5c664;
+}
+
+span{
+    display: inline-block;
+    color: #b50556;
+    white-space: nowrap;
+    border-right: 4px solid;
+    width: 15ch;
+    overflow: hidden;
+    vertical-align: middle;
+    animation: typing 3s steps(18,end) infinite, blink .5s infinite step-end alternate ;
+    
+}
+
+@keyframes typing{
+    0%, 10%, 100%{
+        width: 0;
+    }
+    70%, 90%{
+        width: 15ch;
+    }
+}
+
+@keyframes blink{
+    50% {border-color: transparent;}
+}
+
+@keyframes erase {
+    0%, 50% {
+        width: 15ch;
+    }
+    100% {
+        width: 0;
+    }
 }
 
 nav ul{
@@ -76,15 +113,20 @@ img:hover {
 
 .container {
     display: flex;
+    flex: 1;
     flex-wrap: wrap;  /* Permite que los elementos se envuelvan en múltiples líneas si es necesario */
     margin: 60px auto;
     max-width: 1200px;
     padding: 20px; 
     box-shadow: 0 8px 10px 10px #0000001a;
     border-radius: 12px;
+    background: linear-gradient(to right,  #db0669d3, #f5c764cb);
     
 }
 
+.container {
+    flex-direction: column;
+}
 .sections {
     display: flex;
     flex-direction: column-reverse; /* Cambia el orden de los elementos para móviles */
@@ -93,17 +135,34 @@ img:hover {
     width: 100%;
 }
 
-
 .sections p {
     line-height: 1.6; /* Mejora la legibilidad del texto */
     font-size: 16px;
     padding: 20px;
+    color: white;
+}
+.sections .Introduction{
+    margin-right: 35px;
 }
 
+.Introduction p{
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px #00000033;
+}
+
+.Introduction p::after{
+    content: '';
+    position: absolute;
+    background-color: red;
+    
+    top: 50%;
+    left:50%;
+    translate: -50% -50%;
+}
 
 .secondary-menu{
     display:flex;
-    padding-left: 10px;
+    padding-left: 20px;
     width: 100%;
     margin-top: 50px;
 }
@@ -115,12 +174,12 @@ img:hover {
     padding: 10px 20px;
     margin-bottom: 15px;
     border-radius: 50px;
-    background-color: #9c05aa;
+    background-color: #e4ccd75e;
     transition: background-color 0.3s ease-in-out;
 }
 
 .secondary-menu a:hover {
-    background-color: #6b056a;
+    background-color: #f5c664;
 }
 
 .secondary-menu i {
@@ -128,11 +187,6 @@ img:hover {
 }
 
 
-.container {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
 
 footer {
     background-color: #9c05aa;
