--- a/styles.css
+++ b/styles.css
@@ -69,9 +69,10 @@ span{
 }
 
 nav ul{
-    width: 100%;
+    /*width: 100%;*/
     list-style-type: none;
     text-align: center;
+    border: 4px solid #fffafaf6;
     background: linear-gradient(to right,  #db0669d3, #f5c764cb);
 }
 
@@ -95,12 +96,12 @@ nav ul li a:hover {
 
 
 img {
-    max-width: 80%;
+    max-width: 100%;
     height: auto;
     border-radius: 20%; /* Cambiar a un círculo completo */
     object-fit: cover;
     box-shadow: 0px 0px 10px #0000001a;
-    margin-left: 2rem;
+    margin-right: 2rem;
 }
 
 img:hover {    
@@ -113,9 +114,9 @@ img:hover {
     display: flex;
     flex: 1;
     flex-wrap: wrap;  /* Permite que los elementos se envuelvan en múltiples líneas si es necesario */
-    margin: 60px auto;
+    margin: 50px auto;
     max-width: 1200px;
-    padding: 20px; 
+    padding: 10px; 
     box-shadow: 0 8px 10px 10px #0000001a;
     border-radius: 12px;
     background: linear-gradient(to right,  #db0669d3, #f5c764cb);
