--- a/styles.css
+++ b/styles.css
@@ -1,267 +1,76 @@
-*{
-    padding: 0 ;
-    margin: 0;
-}
-
-
-html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
-
 body{
-    background: linear-gradient(to right,  #db0669c4, #f5c76491);
+    background-color: #070707;
+    margin: 0;
+    padding: 0;
 }
 
-
-h1 {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    background-color: black;
-    color: white;
-    padding: 10px;
-    background: linear-gradient(to right,  #db0669d3, #f5c764cb);
-    
-}
-
-h2 {
-    text-align: center;
-    font-size: 30px;
-    font-family: 'Roboto', sans-serif;
-    padding: 20px;    
-    color: #f5c664;
-}
-
-span{
-    display: inline-block;
-    color: #b50556;
-    white-space: nowrap;
-    border-right: 4px solid;
-    width: 15ch;
-    overflow: hidden;
-    vertical-align: middle;
-    animation: typing 3s steps(18,end) infinite, blink .5s infinite step-end alternate ;
-    
-}
-
-@keyframes typing{
-    0%, 10%, 100%{
-        width: 0;
-    }
-    70%, 90%{
-        width: 15ch;
-    }
-}
-
-@keyframes blink{
-    50% {border-color: transparent;}
-}
-
-@keyframes erase {
-    0%, 50% {
-        width: 15ch;
-    }
-    100% {
-        width: 0;
-    }
-}
-
-nav ul{
-    /*width: 100%;*/
+.Container-Nav{
+    color: #ffffff;
+    position: fixed;
+    background-color: #000000;
     list-style-type: none;
-    text-align: center;
-    border: 4px solid #fffafaf6;
-    background: linear-gradient(to right,  #db0669d3, #f5c764cb);
-}
-
-nav ul li{
+    width: 100%;
+    height: auto;
     display: inline-flex;
-
+    justify-content: space-between;
 }
 
-nav ul li a {
+
+.Nav-Main{
+    align-content:center;
+    margin-right: 15vh;
+}
+.Lists li{
+    display: inline-flex;
+}
+
+.Lists li a{
     text-decoration: none;
     color: white;
-    width: 150px;
-    padding: 10px 0;
-    transition: color 0.3s ease, background-color 0.3s ease;
+    margin-left: 30px;
 }
-
-nav ul li a:hover {
-    color: #e9d8e9bb;
-    background-color: #962094;
+/*
+.Lists li .Home-A{
+    background-color: #a81717f3;
 }
-
-
-img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 20%; /* Cambiar a un círculo completo */
-    object-fit: cover;
-    box-shadow: 0px 0px 10px #0000001a;
-    margin-right: 2rem;
-}
-
-img:hover {    
-    transform: scale(1.1); 
-    transition: transform 0.3s ease-in-out;
-    box-shadow: 0px 0px 20px #00000033;
-}
-
-.container {
-    display: flex;
-    flex: 1;
-    flex-wrap: wrap;  /* Permite que los elementos se envuelvan en múltiples líneas si es necesario */
-    margin: 50px auto;
-    max-width: 1200px;
-    padding: 10px; 
-    box-shadow: 0 8px 10px 10px #0000001a;
-    border-radius: 12px;
-    background: linear-gradient(to right,  #db0669d3, #f5c764cb);
-    
-}
-
-.sections {
-    display: flex;
-    flex-direction: column-reverse; /* Cambia el orden de los elementos para móviles */
-    align-items: center;
-    padding: 10px;
-    width: 100%;
-}
-
-.sections p {
-    line-height: 1.6; /* Mejora la legibilidad del texto */
-    font-family: 'Roboto', 'sans-serif',;
-    font-size: 16px;
-    padding: 20px;
+*/
+.Lists li a {
+    text-decoration: none;
     color: white;
+    padding: 3px 0;
     position: relative;
-}
-.sections .Introduction{
-    margin-right: 35px;
-}
-
-.sections .Introduction::after {
-    content: '';
-    height: 100%;
-    width: 100%;
-    top: 0%;
-    background-color: red;
-    
+    display: inline-block;
+    border-bottom: 2px solid transparent; /* Mantén el borde inicial transparente */
+    transition: border-color 0.3s ease-in-out; /* Aplica la transición solo al color del borde */
 }
 
-.Introduction p{
-    margin-top: 10px;
-    border-radius: 10px;
-    box-shadow: 0px 0px 20px #00000033;
+.Lists li a:hover {
+    border-color: white; /* Cambia solo el color del borde al pasar el mouse */
 }
 
-
-@property --angle{
-    syntax: "<angle>";
-    initial-value: 0deg;
-    inherits: false;
+.Tittle-Main{
+    margin-left: 35px;
 }
 
-.sections .Introduction p::before, .sections .Introduction p::after{
-    content: '';
-    position: absolute;
-    background-image: conic-gradient(from var(--angle), #ff4545, #ff2994, #ff0095, #ec4f33de);
-    height: 99%;
-    width: 99.6%;
-    top: 0%;
-    left:0%;
-    z-index: -1;
-    padding: 3px;
-    border-radius: 10px;
-    animation: 3s spin linear infinite;
-
+#Section-Main{
+    background-color: rgb(128, 127, 126);
+    height: 500PX;
+    color: #ffffff;
+    display: flex; /* --> Convierte el contenido en un contenedor flex */
+    flex-direction: column; /* --> Alinea los elementos de arriba a abajo */
+    justify-content: center;  /* --> Centra verticalmente el contenido */
+    align-items: center; /* --> Centro horizontalmente el contenido */
+    text-align: center; /* --> Alinea el texto en el centro */
 }
 
-.sections .Introduction p::before{
-    filter: blur(1.5rem);
-    opacity: 0.5;
-}
-
-@keyframes spin{
-    from{
-        --angle: 0deg;
-    }
-    to{
-        --angle: 360deg;
-    }
-}
-
-.secondary-menu{
-    display:flex;
-    padding-left: 20px;
-    width: 100%;
-    margin-top: 50px;
-}
-
-.secondary-menu a {
-    display: flex;
-    align-items: center;
-    color: white;
-    padding: 10px 20px;
-    margin-bottom: 15px;
-    border-radius: 50px;
-    background-color: #e4ccd75e;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.secondary-menu a:hover {
-    background-color: #f5c664;
-}
-
-.secondary-menu i {
-    margin-right: 10px;
-}
-
-footer {
-    background-color: #9c05aa;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    
+#Section-AboutMe{
+    background-color: aquamarine;
+    height: 500px;
 }
 
 
 @media (max-width: 768px) {
-    .container {
-        flex-direction: column;
+    .Nav-Main{
+        display: none;
     }
-
-    .secondary-menu {
-        width: 100%;
-        margin-top: 20px;
-        padding: 0;
-    }
-
-    nav ul li a {
-        width: auto;
-        padding: 10px 20px;
-    }
-    span{
-        animation: typing 3s steps(18,end), blink .5s infinite step-end alternate ;
-    }
-    @keyframes typing{
-        from{
-            width: 0;
-        }
-        to{
-            width: 15ch;
-        }
-    }
-}
-
-@keyframes fadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-.container {
-    animation: fadeIn 1s ease-in;
 }
