--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,19 @@
-body{
+body {
     background-color: #070707;
     margin: 0;
     padding: 0;
 }
 
-.Container-Nav{
+html {
+    scroll-behavior: smooth;
+}
+
+
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+.Container-Nav {
     color: #ffffff;
     position: fixed;
     background-color: #000000;
@@ -15,222 +24,251 @@ body{
     justify-content: space-between;
 }
 
-
-
-.checkbtn{
-    float:right;
+.checkbtn {
+    float: right;
     line-height: 80px;
     font-size: 25px;
     cursor: pointer;
     display: none;
 }
 
-#check{
+#check {
     display: none;
 }
 
-
-.Nav-Main{
-    align-content:center;
+.Nav-Main {
+    align-content: center;
     margin-right: 5vh;
 }
-.Lists li{
+
+.Lists li {
     display: inline-flex;
 }
 
-.Lists li a{
-    text-decoration: none;
-    color: white;
-    margin-left: 30px;
-    font-size: 18PX;
-}
-/*
-.Lists li .Home-A{
-    background-color: #a81717f3;
-}
-*/
 .Lists li a {
     text-decoration: none;
     color: white;
-    padding: 3px 0;
-    position: relative;
-    display: inline-block;
+    margin-left: 30px;
+    font-size: 18px;
     border-bottom: 2px solid transparent; /* Mantén el borde inicial transparente */
     transition: border-color 0.3s ease-in-out; /* Aplica la transición solo al color del borde */
 }
 
 .Lists li a:hover {
-    border-color: white; /* Cambia solo el color del borde al pasar el mouse */
+    border-color: white;
 }
 
-.Tittle-Main{
+.Tittle-Main {
     margin-left: 35px;
 }
 
-#Section-Main{
+#Section-Main {
     background-color: #070707;
-    height: 500PX;
+    height: 100vh;
     color: #ffffff;
-    display: flex; /* --> Convierte el contenido en un contenedor flex */
-    flex-direction:row; /* --> Alinea los elementos de arriba a abajo */
+    display: flex;
+    flex-direction: row;
     justify-content: space-around;
-    align-items: center; /* --> Centro horizontalmente el contenido */
-    text-align: center; /* --> Alinea el texto en el centro */
-    
+    align-items: center;
+    text-align: center;
 }
 
-.My-Tittle{
+#Section-AboutMe {
     display: flex;
-    width: 320px;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    height: 100vh;
+
+}
+
+.Container-AboutMe{
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+    width: 70%;
+    height: 70%;
+    box-shadow: 0 8px 10px 10px #0000001a;
+}
+
+.Img-AboutMe{
+    display: block;
+    text-align: center;
+    background-color: #b50556;
+    width:65%;
+    height: 70%;
+    margin-right: 30px;
+}
+
+.Img-AboutMe img{
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#Portafolio{
+    background-color: red;
+    height: 500px;
+}
+
+
+.My-Tittle {
+    display: flex;
+    width: 350px;
     height: auto;
     font-size: 40px;
     font-weight: bold;
     margin-bottom: 50px;
     justify-content: center;
-    flex-direction:column;
+    flex-direction: column;
     text-align: center;
-    
 }
 
-span{
+span {
     display: inline-block;
     color: #b50556;
     white-space: nowrap;
     border-right: 3px solid;
-    margin-left: 3px;
-    width: 17ch;
+    margin-left: 11px;
+    width: 14ch;
     overflow: hidden;
-    animation: typing 3s steps(15) infinite, blink .5s infinite step-end alternate;
+    animation: typing 3s steps(14) infinite, blink .5s infinite step-end alternate;
 }
 
-@keyframes typing{
-    0%, 10%, 100%{
+@keyframes typing {
+    0%, 10%, 100% {
         width: 0;
     }
-    70%, 90%{
-        width: 16.2ch;
+    70%, 90% {
+        width: 14.45ch;
     }
 }
 
-@keyframes blink{
-    50% {border-color: transparent;}
+@keyframes blink {
+    50% { border-color: transparent; }
 }
 
-@keyframes erase {
-    0%, 50% {
-        width: 17ch;
-    }
-    100% {
-        width: 0;
-    }
-}
-.Img-Main{
-    width: 300px;
+.Img-Main {
+    width: 290px;
     height: auto;
     border-radius: 45%;
     margin-top: 50px;
-    margin-right: 100PX;
+    margin-right: 100px;
     object-fit: cover;
 }
 
 .Img-Main:hover {    
-    transform: scale(1.1); 
-    transition: transform 0.3s ease-in-out;
-    box-shadow: 0px 0px 10px #fffefef6;
+    transform: scale(1.01); 
+    transition: transform 0.2s ease-in-out;
+    box-shadow: 0px 0px 10px #414141f6;
 }
 
 
-#Section-AboutMe{
-    background-color: aquamarine;
-    height: 500px;
-}
-
-.bar-icon{
+.bar-icon {
     display: none;
 }
 
 @media (max-width: 768px) {
-    .Tittle-Main{
+    .Tittle-Main {
         display: none;
     }
-    #Section-Main{
+    
+    #Section-Main {
         flex-direction: column;
         align-items: center;
         justify-content: center;
     }
-    .My-Tittle{
+
+    .About-Me{
+        height: 80%;
+    }
+
+
+    .My-Tittle {
         width: auto;
         height: auto;
     }
 
-    .Img-Main{
+    .Img-Main {
         display: none;
     }
-    .My-Tittle{
+
+    .My-Tittle {
         align-items: center;
         text-align: center;
         margin: 0;
     }
-    .bar-icon{
-        display: block;
-        width: 100%;
-        height: 100vh;
-        top: 80px;
-        left: 0;
-        text-align: end;
-        background: #070705;
-    }
 
-    .checkbtn{
+    .checkbtn {
         display: block;
         position: fixed;
         top: 0;
         right: 0;
         cursor: pointer;
-        font-size: 30px;
-        width: 100%;
         background-color: #b50556;
-    }
-
-    #Nav-Bar{
-        margin-right: 1.2rem;
-    }
-
-    .Nav-Main{
-        position: fixed;
+        font-size: 45px;
         width: 100%;
-        height: 30vh;
+        
     }
-    .Nav-Main ul{
+
+    #Nav-Bar {
+        display: flex;
+        justify-content: end;
+        margin-right: 2rem;
+    }
+
+    .Nav-Main {
         position: fixed;
         width: 100%;
         height: 100vh;
-        padding: 0;
-        margin-top: 50px;
+        top: 45px;
+        left: -100%;
         text-align: center;
-        align-items: center;
+        background: #070705;
+        transition: all .5s;
     }
 
-    .Nav-Main ul li{
-        display: block;
-        margin-top: 80px;
+    .Lists {
+        display: flex;
+        flex-direction: column;
+        justify-content:center;
+        align-items: center;
         text-align: center;
+        list-style-type: none;
+        padding: 0;
+        margin-bottom: 250px;
     }
-    .Nav-Main ul li a{
+
+    .Lists li {
+        margin-top: 50px;
+    }
+
+    .Lists li a {
         font-size: 30px;
     }
-    
-    span{
-        width: 16.2ch;
-        animation: typing 3s steps(15), blink .5s infinite step-end alternate;
+
+    #check:checked ~ .Nav-Main {
+        left: 0;
     }
-    @keyframes typing{
-        from{
-            width: 0;
-        }
-        to{
-            width: 16ch;
-        }
+
+    #check:checked ~ .Nav-Main .Lists li a {
+        background-color: transparent;
+        transition: background-color 0.3s;
+    }
+
+    /* Al hacer clic en un enlace, ocultar el menú desmarcando el checkbox */
+    .Nav-Main a {
+        display: block;
+        text-align: center;
+        line-height: 60px;
+    }
+
+    #check:checked ~ .Nav-Main .Lists li a:active ~ #check {
+        display: none;
+    }
+
+    #check:not(:checked) ~ .Nav-Main ul {
+        display: none;
     }
     
 }
