--- a/styles.css
+++ b/styles.css
@@ -68,72 +68,35 @@ html {
     color: #ffffff;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
 }
-
-#Section-AboutMe {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #ffffff;
-    height: 100vh;
-
-}
-
-.Container-AboutMe{
-    display: flex;
-    flex-direction: row;
-    padding: 30px;
-    width: 70%;
-    height: 70%;
-    box-shadow: 0 8px 10px 10px #0000001a;
-}
-
-.Img-AboutMe{
-    display: block;
-    text-align: center;
-    background-color: #b50556;
-    width:65%;
-    height: 70%;
-    margin-right: 30px;
-}
-
-.Img-AboutMe img{
-    max-width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-#Portafolio{
-    background-color: red;
-    height: 500px;
-}
-
 
 .My-Tittle {
+    
     display: flex;
-    width: 350px;
+    width: 50vw;
     height: auto;
-    font-size: 40px;
+    font-size: 5vw;
     font-weight: bold;
-    margin-bottom: 50px;
     justify-content: center;
     flex-direction: column;
-    text-align: center;
+    align-items: start;
+    
 }
 
-span {
+.My-Tittle span {
     display: inline-block;
     color: #b50556;
     white-space: nowrap;
     border-right: 3px solid;
-    margin-left: 11px;
-    width: 14ch;
+    width: 100%; /* Ajustar a todo el ancho disponible */
+    max-width: 14.5ch; /* Limitar el ancho máximo a 14 caracteres */
     overflow: hidden;
     animation: typing 3s steps(14) infinite, blink .5s infinite step-end alternate;
 }
+
 
 @keyframes typing {
     0%, 10%, 100% {
@@ -148,25 +111,76 @@ span {
     50% { border-color: transparent; }
 }
 
+
 .Img-Main {
-    width: 290px;
+    width: 25%;
     height: auto;
-    border-radius: 45%;
+    border-radius: 20%;
     margin-top: 50px;
-    margin-right: 100px;
     object-fit: cover;
+    box-shadow: 0 0px 5px #fffcfce8;
 }
 
 .Img-Main:hover {    
-    transform: scale(1.01); 
+    transform: scale(1.1); 
     transition: transform 0.2s ease-in-out;
-    box-shadow: 0px 0px 10px #414141f6;
+    box-shadow: 0px 0px 10px #fffcfce8;
 }
 
 
+
+#Section-AboutMe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    height: 100vh;
+
+}
+
+.Container-AboutMe{
+    display: flex;
+    flex-direction: row;
+    padding: 30px;
+    margin-top: 70px;
+    width: 80%;
+    height: 70%;
+    box-shadow: 0 8px 10px 10px #0000001a;
+}
+
+.About-Me {
+    margin-left: 30px;
+}
+
+.Img-AboutMe{
+    display: block;
+    text-align: center;
+    max-width: 100%;
+    height: 100%;
+    background-color: #b50556;
+    border-radius: 12%;
+    box-shadow: 0 8px 10px 10px #0000001a;
+}
+
+.Img-AboutMe img{
+    max-width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+/* Menu Responsive */
 .bar-icon {
     display: none;
 }
+
+
+#Portafolio{
+    background-color: red;
+    height: 100vh;
+}
+
+/*--------------------------RESPONSIVE--------------------------*/
 
 @media (max-width: 768px) {
     .Tittle-Main {
@@ -179,26 +193,49 @@ span {
         justify-content: center;
     }
 
-    .About-Me{
-        height: 80%;
-    }
-
-
     .My-Tittle {
-        width: auto;
-        height: auto;
+            font-size: 10vw; /* Ajustar el tamaño del texto basado en la vista */
+            width: auto;
+            height: auto;
+            align-items: center;
+            text-align: center;
+            margin: 0;
+        }
+
+    .My-Tittle span {
+        width: auto; /* Permitir que el ancho sea dinámico */
+        max-width: 90vw; /* Limitar el ancho máximo a un porcentaje de la vista */
+        font-size: 10vw; /* Ajustar el tamaño del texto basado en la vista */
     }
 
     .Img-Main {
-        display: none;
+            display: none;
     }
-
-    .My-Tittle {
+    
+    .Container-AboutMe{
+        flex-direction: column;
         align-items: center;
-        text-align: center;
-        margin: 0;
+        max-width: 70%;
+        max-height: auto;
+        margin-top: 20px;
     }
-
+    
+    .About-Me{
+        height: 50%;
+        overflow: auto;
+    }
+    
+    .Img-AboutMe{
+        height: 100%;
+        max-width: 50%;
+    }
+    
+    .Container-AboutMe .Img-AboutMe{
+        height: 50%;
+        width: 100%;
+    }
+    
+    
     .checkbtn {
         display: block;
         position: fixed;
@@ -210,13 +247,13 @@ span {
         width: 100%;
         
     }
-
+    
     #Nav-Bar {
         display: flex;
         justify-content: end;
-        margin-right: 2rem;
+        margin-right: 1rem;
     }
-
+    
     .Nav-Main {
         position: fixed;
         width: 100%;
@@ -227,48 +264,58 @@ span {
         background: #070705;
         transition: all .5s;
     }
-
-    .Lists {
+    
+    .Lists { 
         display: flex;
         flex-direction: column;
         justify-content:center;
         align-items: center;
         text-align: center;
         list-style-type: none;
+        list-style-type: none;
         padding: 0;
-        margin-bottom: 250px;
+        margin-bottom: 100px;
     }
-
+    
     .Lists li {
-        margin-top: 50px;
+        margin-top: 5vh;
     }
-
+    
     .Lists li a {
-        font-size: 30px;
+        font-size: 5vh;
+        
     }
-
+    
     #check:checked ~ .Nav-Main {
         left: 0;
     }
-
+    
     #check:checked ~ .Nav-Main .Lists li a {
         background-color: transparent;
         transition: background-color 0.3s;
     }
-
+    
     /* Al hacer clic en un enlace, ocultar el menú desmarcando el checkbox */
     .Nav-Main a {
         display: block;
         text-align: center;
         line-height: 60px;
     }
-
+    
     #check:checked ~ .Nav-Main .Lists li a:active ~ #check {
         display: none;
     }
-
+    
     #check:not(:checked) ~ .Nav-Main ul {
         display: none;
     }
     
 }
+
+/*--------------------------RESPONSIVE--------------------------*/
+@media (max-width: 450px) {
+        .Img-AboutMe{
+            max-width: 100%;
+        }
+    }
+/*--------------------------RESPONSIVE--------------------------*/
