--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ html {
     height: auto;
     display: inline-flex;
     justify-content: space-between;
+    z-index: 100;
 }
 
 .checkbtn {
@@ -94,7 +95,7 @@ html {
     width: 100%;
     max-width: 14.55ch;
     overflow: hidden;
-    animation: typing 4s steps(15, end) infinite, blink 0.5s infinite step-end alternate;
+    animation: typing 3s steps(15, end) infinite, blink 0.5s infinite step-end alternate;
 }
 
 
@@ -153,11 +154,11 @@ html {
     margin-left: 20px;
 }
 
-.About-Me h2{
+h2{
     position: relative;
 }
 
-.About-Me h2:after {
+h2:after {
     content: "";
     background: #b50556;
     position: absolute;
@@ -233,9 +234,48 @@ html {
 }
 
 
-#Portafolio{
-    background-color: rgba(243, 116, 116, 0.719);
-    width: 100%;
+#Section-Experience-Education{
+    background-color: #ffffff;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: repeat(2, 1fr);   
+    
+}
+
+.Container-Experience, .Container-Education{
+    font-size: 1.2vw; /* Responsive 1.8 ~ 1-9 vw*/
+    margin-top: 35px;
+    padding: 1rem;
+}
+.Container-Experience .Card, .Container-Education .Card{
+    border-left: 5px solid #b50556;
+    padding: 30px;
+    margin: 30px;
+    transition: all .5s;
+}
+
+.Container-Experience .Card:hover, .Container-Education .Card:hover{
+    transform: scale(1.1); 
+    overflow: auto;
+    transition: transform 0.2s ease-in-out;
+    box-shadow: 0px 0px 10px #070705;
+
+}
+
+
+
+
+.Container-Cards .Card h2{
+    text-align: center;
+    align-items: center;
+}
+
+.Container-Cards .Card{
+    line-height: 1.5;
+}
+
+.Container-Cards .Card ul li{
+    margin-bottom: 10px;
 }
 
 .hidden-heading {
@@ -319,11 +359,12 @@ html {
         gap: 10px;
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: minmax(10px, auto);
-        width: 100%;
+        align-items: center;
+        text-align: center;
     }
 
     .Container-AboutMe .Contact-Info p a i{
-        font-size: 30px;
+        font-size: 35px;
     }
     
     .checkbtn {
