--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,7 @@ h2:after {
     justify-content: space-evenly;
     flex-direction: row;
     text-align: center;
-    align-items: center;;
+    align-items: center;
 }
 
 .Container-Icons i{
@@ -261,9 +261,6 @@ h2:after {
     box-shadow: 0px 0px 10px #070705;
 
 }
-
-
-
 
 .Container-Cards .Card h2{
     text-align: center;
@@ -367,6 +364,15 @@ h2:after {
         font-size: 35px;
     }
     
+    #Section-Experience-Education{
+        grid-template-columns: repeat(1, 1fr);
+        
+    }
+
+    #Section-Experience-Education .Container-Cards{
+        font-size: 15px;
+    }
+
     .checkbtn {
         display: block;
         position: fixed;
@@ -455,6 +461,24 @@ h2:after {
             grid-template-columns: repeat(1, 1fr);
             align-items: center;
             text-align: center;
+        }
+        
+        #Section-Experience-Education{
+            display: block;
+            max-width: 100%;
+            height: 100%;
+            grid-template-columns: repeat(1, 1fr);
+            height: auto;
+        }
+        
+        .Container-Experience .Card, .Container-Education .Card{
+            border: 0px solid #ffffff;
+            margin-left: 0;
+        }
+        
+        .Container-Experience .Card:hover, .Container-Education .Card:hover{
+            transform: scale(1);
+            box-shadow: none;
         }
     }
 
