--- a/styles.css
+++ b/styles.css
@@ -116,11 +116,11 @@ html {
 
 .Img-Main {
     width: 25%;
-    height: auto;
+    height: 65%;
     border-radius: 20%;
     margin-top: 50px;
     object-fit: cover;
-    box-shadow: 0 0px 5px #b6b1b1;
+    box-shadow: 0px 0px 5px #fffcfce8;
 }
 
 .Img-Main:hover {    
@@ -244,7 +244,7 @@ h2:after {
 
 .Container-Experience, .Container-Education{
     font-size: 1.2vw; /* Responsive 1.8 ~ 1-9 vw*/
-    margin-top: 35px;
+    margin-top: 4rem;
     padding: 1rem;
 }
 .Container-Experience .Card, .Container-Education .Card{
@@ -290,17 +290,49 @@ h2:after {
     z-index: 99;
     font-size: 20px;
     cursor: pointer;
+    transition: all 0.5s;
 }
 
 .arrow-up a i{
     color: #b50556;
-    font-size: 30px;
+    font-size: 45px;
     transition: all 0.5s;
 }
 
 .arrow-up .at-top i{
     transform: rotate(180deg);
 }
+
+/*Se creo a partia de un Scrip en JavaScript de arrow-up*/
+.overArrowUp:hover {
+    transform: scale(1.5);
+}
+
+
+
+.Reveal {
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+
+.Reveal.visible {
+    transform: translateY(0);
+    opacity: 1;
+}
+
+section {
+    animation: fadeIn 1s ease-in;
+}
+
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
 
 
 /*--------------------------RESPONSIVE--------------------------*/
@@ -468,6 +500,9 @@ h2:after {
     #check:not(:checked) ~ .Nav-Main ul {
         display: none;
     }
+    .arrow-up{
+        right: 10px;
+    }
 
 }
 
@@ -514,6 +549,7 @@ h2:after {
             font-size: 3.2vh;
             
         }
+
     }
 
 /*--------------------------RESPONSIVE--------------------------*/
